--- a/lab5/lab5.Rmd
+++ b/lab5/lab5.Rmd
@@ -26,26 +26,31 @@ library(ggplot2)
 
 # Creating a satterplot for two variables 'Sepal.Length' and 'Sepal.Width'
 # Write your anwser here
-ggplot(data = newdata, mapping = aes(x = Sepal.Length, y = Sepal.Width)) + geom_point()
+ggplot(data = newdata, mapping = aes(x = Sepal.Length, y = Sepal.Width)) +
+  geom_point()
 ```
 
 
 ```{r}
-# Adding another variable 'Species' and indicate 'Species' using color 
+# Adding another variable 'Species' and indicate 'Species' using color
 # Write your anwser here
-ggplot(data = newdata, mapping = aes(x = Sepal.Length, y = Sepal.Width, col = Species)) + geom_point()
+ggplot(data = newdata, mapping = aes(x = Sepal.Length, y = Sepal.Width, col = Species)) +
+  geom_point()
 ```
 
 ```{r}
 # Creating a satterplot for two variables 'Petal.Length' and 'Petal.Width'
 # Write your answer here
-ggplot(data = newdata, mapping = aes(x = Petal.Length, y = Petal.Width)) + geom_point()
+ggplot(data = newdata, mapping = aes(x = Petal.Length, y = Petal.Width)) +
+  geom_point()
 ```
 
 ```{r}
-# Adding another variable 'Species' and indicate 'Species' using color 
+# Adding another variable 'Species' and indicate 'Species' using color
 # Write your answer here
-ggplot(data = newdata, mapping = aes(x = Petal.Length, y = Petal.Width, shape = Species)) + geom_point() + theme(plot.background = element_rect(fill = "lightblue", colour = "black"))
+ggplot(data = newdata, mapping = aes(x = Petal.Length, y = Petal.Width, shape = Species)) +
+  geom_point() +
+  theme(plot.background = element_rect(fill = "lightblue", colour = "black"))
 ```
 
 ## 1.2 ggplot2 - Aesthetic
@@ -65,7 +70,8 @@ library(ggplot2)
 
 # Read in dataset
 data(iris)
-p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour=Species)) + geom_point()
+p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour = Species)) +
+  geom_point()
 p
 ```
 
@@ -104,7 +110,8 @@ library(ggplot2)
 # Read in dataset
 data(iris)
 
-p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour=Species)) + geom_point()
+p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour = Species)) +
+  geom_point()
 p
 ```
 
@@ -113,13 +120,13 @@ The legends are created on right most corners of the plot above.
 We can remove the legend with the help of property ```legend.position```:
 ```{r}
 # Remove Legend
-p + theme(legend.position="none")
+p + theme(legend.position = "none")
 ```
 
 We can also hide the **title of legend** with property ```element_blank()```:
 ```{r}
 # Hide the legend title
-p + theme(legend.title=element_blank())
+p + theme(legend.title = element_blank())
 ```
 
 $\color{red}{\text{In-class exercise}}$
@@ -127,7 +134,8 @@ $\color{red}{\text{In-class exercise}}$
 Use the legend position to set legend on top of the plot.
 ```{r}
 # Write your answer here
-p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour=Species)) + geom_point()
+p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour = Species)) +
+  geom_point()
 p + theme(legend.position = "top")
 ```
 
@@ -144,15 +152,15 @@ $\color{red}{\text{In-class exercise}}$
 Change the font style of **legend text** to red and italic.
 ```{r}
 # Write your answer here
-p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour=Species)) + geom_point()
+p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour = Species)) +
+  geom_point()
 p + theme(legend.text = element_text(colour = "red", face = "italic"))
 ```
 
 It is also possible to change legend titles using the function ```guides()```:
 ```{r}
 # Change Legend Title using guides() Function
-p + guides(color=guide_legend(title="Iris species"))
-
+p + guides(color = guide_legend(title = "Iris species"))
 ```
 
 
@@ -161,7 +169,8 @@ p + guides(color=guide_legend(title="Iris species"))
 
 ```{r}
 # Default plot
-p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour=Species)) + geom_point()
+p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour = Species)) +
+  geom_point()
 p
 ```
 
@@ -171,9 +180,11 @@ Modify main titles and axis labels:
 p + ggtitle("main title") +
   xlab("x axis") + ylab("y axis")
 # Or
-# Change plot titles using the function labs() 
-p +labs(title="Change main title",
-        x ="change x axis", y = "change y axis")
+# Change plot titles using the function labs()
+p + labs(
+  title = "Change main title",
+  x = "change x axis", y = "change y axis"
+)
 ```
 
 $\color{red}{\text{In-class exercise}}$
@@ -185,7 +196,8 @@ Given the default plot:
 (Hint: similar way as in modifying legend style.)
 ```{r}
 # Default plot
-p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour=Species)) + geom_point()
+p <- ggplot(iris, aes(Sepal.Length, Petal.Length, colour = Species)) +
+  geom_point()
 # write your answer here
 p + ggtitle("Petal.length (cm)") +
   xlab("Sepal.length (cm)") +
@@ -194,7 +206,6 @@ p + ggtitle("Petal.length (cm)") +
     plot.title = element_text(colour = "blue"), # change plot title (TODO: change font family)
     axis.title = element_text(colour = "dodgerblue", face = "italic"),
   )
-
 ```
 
 
@@ -205,19 +216,22 @@ Scatter Plots are similar to line graphs which are usually used for plotting. Th
 Creating Basic Scatter Plot:
 ```{r}
 # Basic Scatter Plot
-ggplot(iris, aes(Sepal.Length, Petal.Length)) + geom_point()
+ggplot(iris, aes(Sepal.Length, Petal.Length)) +
+  geom_point()
 ```
 
 We can change the shape of points with a property called shape in geom_point() function.
 ```{r}
 # Change the shape of points
-ggplot(iris, aes(Sepal.Length, Petal.Length)) + geom_point(shape=1)
+ggplot(iris, aes(Sepal.Length, Petal.Length)) +
+  geom_point(shape = 1)
 ```
 
 Again, add color to different species of Iris:
 
 ```{r}
-ggplot(iris, aes(Sepal.Length, Petal.Length, color = Species)) + geom_point(shape=1)
+ggplot(iris, aes(Sepal.Length, Petal.Length, color = Species)) +
+  geom_point(shape = 1)
 ```
 
 
@@ -228,7 +242,7 @@ Now we will focus on establishing relationship between the variables. Draw linea
 ```{r}
 # write your answer here
 ggplot(iris, aes(Sepal.Length, Petal.Length, color = Species)) +
-  geom_point(shape=1) +
+  geom_point(shape = 1) +
   geom_smooth(method = "lm")
 ```
 
@@ -237,14 +251,16 @@ We can also add a regression line with no shaded confidence region. Hint: set ``
 ```{r}
 # write your answer here
 ggplot(iris, aes(Sepal.Length, Petal.Length, color = Species)) +
-  geom_point(shape=1) +
-  geom_smooth(method = "lm", se=FALSE)
+  geom_point(shape = 1) +
+  geom_smooth(method = "lm", se = FALSE)
 ```
 
 **Jitter plots** include special effects with which scattered plots can be depicted. Jitter is nothing but a random value that is assigned to dots to separate data. Here, we take the ```mpg``` dataset for example. We can use ```help(mpg)``` to get dataset description.
 
 ```{r}
-ggplot(mpg, aes(cyl, hwy)) + geom_point() + geom_jitter(aes(colour = class))
+ggplot(mpg, aes(cyl, hwy)) +
+  geom_point() +
+  geom_jitter(aes(colour = class))
 # Try the following code and see the difference.
 # ggplot(mpg, aes(cyl, hwy, color = class)) + geom_point()
 ```
@@ -288,7 +304,6 @@ Then, let's **Change Properties of Geometries**
 
 ```{r eval = FALSE}
 # write your answer here
-
 ```
 
 Each geom comes with its own properties (called arguments) and the same argument may result in a different change depending on the geom you are using. 
@@ -297,8 +312,6 @@ Each geom comes with its own properties (called arguments) and the same argument
 
 ```{r eval = FALSE}
 # write your answer here
-
-
 ```
 
 
@@ -315,21 +328,27 @@ knitr::include_graphics("./formula_exercise.png")
 ```{r}
 # Statistics layer
 library(ggplot2)
-p <- ggplot(data = mtcars, 
-       mapping = aes(x = hp, y = mpg)) +
-  geom_point() + 
-  stat_smooth(method = lm, formula = y~x, col = "red", cex = 1)
+p <- ggplot(
+  data = mtcars,
+  mapping = aes(x = hp, y = mpg)
+) +
+  geom_point() +
+  stat_smooth(method = lm, formula = y ~ x, col = "red", cex = 1)
 
 # write your answers here
-lm_eqn <- function(df, yvar, xvar){
-    formula_str <- paste(yvar, " ~ ", xvar)
-    m <- lm(formula_str, data=df);
-    eq <- substitute(italic(y) == a + (b) %.% italic(x)*","~~italic(r)^2~"="~r2,
-         list(a = format(unname(coef(m)[1]), digits = 2),
-              b = format(unname(coef(m)[2]), digits = 2),
-             r2 = format(summary(m)$r.squared, digits = 3)))
-    # as.character(as.expression(eq));
-    as.expression(eq);
+lm_eqn <- function(df, yvar, xvar) {
+  formula_str <- paste(yvar, " ~ ", xvar)
+  m <- lm(formula_str, data = df)
+  eq <- substitute(
+    italic(y) == a + (b) %.% italic(x) * "," ~ ~ italic(r)^2 ~ "=" ~ r2,
+    list(
+      a = format(unname(coef(m)[1]), digits = 2),
+      b = format(unname(coef(m)[2]), digits = 2),
+      r2 = format(summary(m)$r.squared, digits = 3)
+    )
+  )
+  # as.character(as.expression(eq));
+  as.expression(eq)
 }
 
 p + ggtitle(lm_eqn(mtcars, "mpg", "hp"))
