--- a/lab7/lab7.Rmd
+++ b/lab7/lab7.Rmd
@@ -14,7 +14,7 @@ Bivariate graphs display the relationship between two variables. The type of gra
 ```{r eval=FALSE}
 # If you have not installed the following packages, please copy the following codes to console to install the required packages
 pkgs <- c("gapminder", "mosaicData", "carData")
-#install.packages(pkgs)
+# install.packages(pkgs)
 install.packages(pkgs, repos = "http://cran.us.r-project.org")
 ```
 
@@ -31,9 +31,13 @@ Let’s plot the relationship between `automobile` class and drive type (front-w
 library(ggplot2)
 
 # stacked bar chart
-ggplot(mpg, 
-       aes(x = class, 
-           fill = drv)) + 
+ggplot(
+  mpg,
+  aes(
+    x = class,
+    fill = drv
+  )
+) +
   geom_bar(position = "stack")
 ```
 
@@ -49,9 +53,13 @@ Grouped bar charts place bars for the second categorical variable side-by-side. 
 library(ggplot2)
 
 # grouped bar plot
-ggplot(mpg, 
-       aes(x = class, 
-           fill = drv)) + 
+ggplot(
+  mpg,
+  aes(
+    x = class,
+    fill = drv
+  )
+) +
   geom_bar(position = "dodge")
 ```
 
@@ -64,11 +72,14 @@ library(ggplot2)
 
 # grouped bar plot preserving zero count bars
 # write your answer here
-ggplot(mpg, 
-       aes(x = class, 
-           fill = drv)) + 
+ggplot(
+  mpg,
+  aes(
+    x = class,
+    fill = drv
+  )
+) +
   geom_bar(position = position_dodge2(preserve = "single"))
-
 ```
 
 Note that this option is only available in the latest development version of `ggplot2`, but should should be generally available shortly.
@@ -82,9 +93,13 @@ A segmented bar plot is a stacked bar plot where each bar represents 100 percent
 library(ggplot2)
 
 # bar plot, with each bar representing 100%
-ggplot(mpg, 
-       aes(x = class, 
-           fill = drv)) + 
+ggplot(
+  mpg,
+  aes(
+    x = class,
+    fill = drv
+  )
+) +
   geom_bar(position = "fill") +
   labs(y = "Proportion")
 ```
@@ -108,27 +123,41 @@ You can use additional options to improve color and labeling. In the graph below
 ```{r}
 library(ggplot2)
 
-# bar plot, with each bar representing 100%, 
+# bar plot, with each bar representing 100%,
 # reordered bars, and better labels and colors
 library(scales)
-ggplot(mpg, 
-       aes(x = factor(class,
-                      levels = c("2seater", "subcompact", 
-                                "compact", "midsize", 
-                                "minivan", "suv", "pickup")),
-           fill = factor(drv, 
-                         levels = c("f", "r", "4"),
-                         labels = c("front-wheel", 
-                                    "rear-wheel", 
-                                    "4-wheel")))) + 
+ggplot(
+  mpg,
+  aes(
+    x = factor(class,
+      levels = c(
+        "2seater", "subcompact",
+        "compact", "midsize",
+        "minivan", "suv", "pickup"
+      )
+    ),
+    fill = factor(drv,
+      levels = c("f", "r", "4"),
+      labels = c(
+        "front-wheel",
+        "rear-wheel",
+        "4-wheel"
+      )
+    )
+  )
+) +
   geom_bar(position = "fill") +
-  scale_y_continuous(breaks = seq(0, 1, .2), 
-                     label = percent) +
+  scale_y_continuous(
+    breaks = seq(0, 1, .2),
+    label = percent
+  ) +
   scale_fill_brewer(palette = "Set2") +
-  labs(y = "Percent", 
-       fill = "Drive Train",
-       x = "Class",
-       title = "Automobile Drive by Class") +
+  labs(
+    y = "Percent",
+    fill = "Drive Train",
+    x = "Class",
+    title = "Automobile Drive by Class"
+  ) +
   theme_minimal()
 ```
 
@@ -136,10 +165,13 @@ In the graph above, the `factor` function was used to reorder and/or rename the 
 
 ```{r}
 # change the order the levels for the categorical variable "class"
-mpg$class = factor(mpg$class,
-                   levels = c("2seater", "subcompact", 
-                              "compact", "midsize", 
-                              "minivan", "suv", "pickup"))
+mpg$class <- factor(mpg$class,
+  levels = c(
+    "2seater", "subcompact",
+    "compact", "midsize",
+    "minivan", "suv", "pickup"
+  )
+)
 ```
 
 The `factor` function is placed within the ggplot function to demonstrate that, if desired, you can change the order of the categories and labels for the categories for a single graph.
@@ -153,9 +185,11 @@ Next, let’s add percent labels to each segment. First, we’ll create a summar
 library(dplyr)
 plotdata <- mpg %>%
   group_by(class, drv) %>%
-  summarize(n = n()) %>% 
-  mutate(pct = n/sum(n),
-         lbl = scales::percent(pct))
+  summarize(n = n()) %>%
+  mutate(
+    pct = n / sum(n),
+    lbl = scales::percent(pct)
+  )
 plotdata
 ```
 
@@ -165,29 +199,46 @@ Next, we’ll use this dataset and the `geom_text` function to add labels to eac
 # create segmented bar chart
 # adding labels to each segment
 
-ggplot(plotdata, 
-       aes(x = factor(class,
-                      levels = c("2seater", "subcompact", 
-                                 "compact", "midsize", 
-                                 "minivan", "suv", "pickup")),
-           y = pct,
-           fill = factor(drv, 
-                         levels = c("f", "r", "4"),
-                         labels = c("front-wheel", 
-                                    "rear-wheel", 
-                                    "4-wheel")))) + 
-  geom_bar(stat = "identity",
-           position = "fill") +
-  scale_y_continuous(breaks = seq(0, 1, .2), 
-                     labels = percent) +
-  geom_text(aes(label = lbl), 
-            size = 3, 
-            position = position_stack(vjust = 0.5)) +
+ggplot(
+  plotdata,
+  aes(
+    x = factor(class,
+      levels = c(
+        "2seater", "subcompact",
+        "compact", "midsize",
+        "minivan", "suv", "pickup"
+      )
+    ),
+    y = pct,
+    fill = factor(drv,
+      levels = c("f", "r", "4"),
+      labels = c(
+        "front-wheel",
+        "rear-wheel",
+        "4-wheel"
+      )
+    )
+  )
+) +
+  geom_bar(
+    stat = "identity",
+    position = "fill"
+  ) +
+  scale_y_continuous(
+    breaks = seq(0, 1, .2),
+    labels = percent
+  ) +
+  geom_text(aes(label = lbl),
+    size = 3,
+    position = position_stack(vjust = 0.5)
+  ) +
   scale_fill_brewer(palette = "Set2") +
-  labs(y = "Percent", 
-       fill = "Drive Train",
-       x = "Class",
-       title = "Automobile Drive by Class") +
+  labs(
+    y = "Percent",
+    fill = "Drive Train",
+    x = "Class",
+    title = "Automobile Drive by Class"
+  ) +
   theme_minimal()
 ```
 
@@ -203,12 +254,16 @@ The simplest display of two quantitative variables is a scatterplot, with each v
 
 ```{r}
 library(ggplot2)
-data(Salaries, package="carData")
+data(Salaries, package = "carData")
 
 # simple scatterplot
-ggplot(Salaries, 
-       aes(x = yrs.since.phd, 
-           y = salary)) +
+ggplot(
+  Salaries,
+  aes(
+    x = yrs.since.phd,
+    y = salary
+  )
+) +
   geom_point()
 ```
 
@@ -227,20 +282,32 @@ We can use these options and functions to create a more attractive scatterplot.
 ```{r}
 # Scatterplot with color, transparency, and axis scaling
 # enhanced scatter plot
-ggplot(Salaries, 
-       aes(x = yrs.since.phd, 
-           y = salary)) +
-  geom_point(color="cornflowerblue", 
-             size = 2, 
-             alpha=.8) +
-  scale_y_continuous(label = scales::dollar, 
-                     limits = c(50000, 250000)) +
-  scale_x_continuous(breaks = seq(0, 60, 10), 
-                     limits=c(0, 60)) + 
-  labs(x = "Years Since PhD",
-       y = "",
-       title = "Experience vs. Salary",
-       subtitle = "9-month salary for 2008-2009")
+ggplot(
+  Salaries,
+  aes(
+    x = yrs.since.phd,
+    y = salary
+  )
+) +
+  geom_point(
+    color = "cornflowerblue",
+    size = 2,
+    alpha = .8
+  ) +
+  scale_y_continuous(
+    label = scales::dollar,
+    limits = c(50000, 250000)
+  ) +
+  scale_x_continuous(
+    breaks = seq(0, 60, 10),
+    limits = c(0, 60)
+  ) +
+  labs(
+    x = "Years Since PhD",
+    y = "",
+    title = "Experience vs. Salary",
+    subtitle = "9-month salary for 2008-2009"
+  )
 ```
 
 ### Line plot
@@ -248,18 +315,24 @@ When one of the two variables represents time, a line plot can be an effective m
 
 
 ```{r}
-data(gapminder, package="gapminder")
+data(gapminder, package = "gapminder")
 
 # Select US cases
 library(dplyr)
-plotdata <- filter(gapminder, 
-                   country == "United States")
+plotdata <- filter(
+  gapminder,
+  country == "United States"
+)
 
 # simple line plot
-ggplot(plotdata, 
-       aes(x = year, 
-           y = lifeExp)) +
-  geom_line() 
+ggplot(
+  plotdata,
+  aes(
+    x = year,
+    y = lifeExp
+  )
+) +
+  geom_line()
 ```
 
 
@@ -275,13 +348,16 @@ It is hard to read individual values in the graph above. In the next plot, we’
 # line plot with points
 # and improved labeling
 # write your answer here
-ggplot(plotdata, 
-       aes(x = year, 
-           y = lifeExp)) +
+ggplot(
+  plotdata,
+  aes(
+    x = year,
+    y = lifeExp
+  )
+) +
   geom_line() +
-  geom_point(size=3, color="steelblue") +
+  geom_point(size = 3, color = "steelblue") +
   labs(x = "Year", y = "Life Expectancy (years)", title = "Life expectancy changes over time", subtitle = "United States (1952-2007)", caption = "Source: http://www.gapminder.org/data/")
-
 ```
 
 Time dependent data is covered in more detail under Time series. Customizing line graphs is covered in the Customizing graphs section.
@@ -297,7 +373,7 @@ In previous sections, bar charts were used to display the number of cases by cat
 For example, the following graph displays the mean salary for a sample of university professors by their academic rank.
 
 ```{r}
-data(Salaries, package="carData")
+data(Salaries, package = "carData")
 
 # calculate mean salary for each rank
 library(dplyr)
@@ -306,9 +382,13 @@ plotdata <- Salaries %>%
   summarize(mean_salary = mean(salary))
 
 # plot mean salaries
-ggplot(plotdata, 
-       aes(x = rank, 
-           y = mean_salary)) +
+ggplot(
+  plotdata,
+  aes(
+    x = rank,
+    y = mean_salary
+  )
+) +
   geom_bar(stat = "identity")
 ```
 
@@ -324,23 +404,33 @@ knitr::include_graphics("bar-chart.png")
 ```{r}
 # plot mean salaries in a more attractive fashion
 # write your answer here
-ggplot(plotdata, 
-       aes(x = factor(rank, 
-                         levels = c("AsstProf", "AssocProf", "Prof"),
-                         labels = c("Assistant Professor", 
-                                    "Associate Professor", 
-                                    "Full Professor")), 
-           y = mean_salary)) +
-  geom_bar(stat = "identity", fill="cornflowerblue") +
+ggplot(
+  plotdata,
+  aes(
+    x = factor(rank,
+      levels = c("AsstProf", "AssocProf", "Prof"),
+      labels = c(
+        "Assistant Professor",
+        "Associate Professor",
+        "Full Professor"
+      )
+    ),
+    y = mean_salary
+  )
+) +
+  geom_bar(stat = "identity", fill = "cornflowerblue") +
   geom_text(aes(label = paste0("$", comma(mean_salary, accuracy = 1, scale = 1))), vjust = -0.5, color = "black", size = 4) +
-  scale_y_continuous(label = scales::dollar, 
-                     limits = c(0, 130000),
-                     breaks = seq(0, 130000, 20000)) +
-  labs(x = "",
-       y = "",
-       title = "Mean Salary by Rank",
-       subtitle = "9-month academic salary for 2008-2009")
-
+  scale_y_continuous(
+    label = scales::dollar,
+    limits = c(0, 130000),
+    breaks = seq(0, 130000, 20000)
+  ) +
+  labs(
+    x = "",
+    y = "",
+    title = "Mean Salary by Rank",
+    subtitle = "9-month academic salary for 2008-2009"
+  )
 ```
 
 One limitation of such plots is that they do not display the distribution of the data - only the summary statistic for each group. The plots below correct this limitation to some extent.
@@ -353,7 +443,7 @@ Draw kernel density plot of Salaries taking `example 2.2 in lab6` as reference, 
 $\color{red}{\text{In-class exercise}}$
 
 ```{r}
-data(Salaries, package="carData")
+data(Salaries, package = "carData")
 
 # draw kernel density plot
 # write your answer here
@@ -370,13 +460,12 @@ Split the density according to the `rank` of professors.
 Hint: specify the `fill` property; set `alpha=0.4` and see the effect.
 
 ```{r}
-data(Salaries, package="carData")
+data(Salaries, package = "carData")
 
 # draw kernel density plot
 # write your answer here
 ggplot(Salaries, aes(x = salary, fill = rank)) +
   geom_density(alpha = 0.4)
-
 ```
 
 
@@ -394,9 +483,13 @@ Box plot Side-by-side box plots are very useful for comparing groups (i.e., the 
 
 ```{r}
 # plot the distribution of salaries by rank using boxplots
-ggplot(Salaries, 
-       aes(x = rank, 
-           y = salary)) +
+ggplot(
+  Salaries,
+  aes(
+    x = rank,
+    y = salary
+  )
+) +
   geom_boxplot() +
   labs(title = "Salary distribution by rank")
 ```
@@ -405,11 +498,15 @@ Notched boxplots provide an approximate method for visualizing whether groups di
 
 ```{r}
 # plot the distribution of salaries by rank using boxplots
-ggplot(Salaries, aes(x = rank, 
-                     y = salary)) +
-  geom_boxplot(notch = TRUE, 
-               fill = "cornflowerblue", 
-               alpha = .7) +
+ggplot(Salaries, aes(
+  x = rank,
+  y = salary
+)) +
+  geom_boxplot(
+    notch = TRUE,
+    fill = "cornflowerblue",
+    alpha = .7
+  ) +
   labs(title = "Salary distribution by rank")
 ```
 
@@ -423,17 +520,19 @@ One of the advantages of boxplots is that their widths are not usually meaningfu
 Cleveland plots are useful when you want to compare a numeric statistic for a large number of groups. For example, say that you want to compare the 2007 life expectancy for Asian country using the `gapminder` dataset.
 
 ```{r}
-data(gapminder, package="gapminder")
+data(gapminder, package = "gapminder")
 
 # subset Asian countries in 2007
 library(dplyr)
 plotdata <- gapminder %>%
-  filter(continent == "Asia" & 
-         year == 2007)
+  filter(continent == "Asia" &
+    year == 2007)
 
 # basic Cleveland plot of life expectancy by country
-ggplot(plotdata, 
-       aes(x= lifeExp, y = country)) +
+ggplot(
+  plotdata,
+  aes(x = lifeExp, y = country)
+) +
   geom_point()
 ```
 
@@ -444,24 +543,32 @@ Comparisons are usually easier if the `y-axis` is sorted. Hint: use reorder() fo
 ```{r}
 # write your answer here
 # Sorted Cleveland plot
-ggplot(plotdata, 
-       aes(x= lifeExp, y = reorder(country, lifeExp))) +
+ggplot(
+  plotdata,
+  aes(x = lifeExp, y = reorder(country, lifeExp))
+) +
   geom_point()
-
 ```
 
 Next is the example of using `geom_segment()` to draw line segments.
 
 ```{r}
-ggplot(plotdata, 
-       aes(x = lifeExp, 
-           y = country)) + 
-geom_segment(aes(x = 40, 
-               xend = lifeExp, 
-               y = country,
-               yend = country
-               ),
-               color = "lightblue")
+ggplot(
+  plotdata,
+  aes(
+    x = lifeExp,
+    y = country
+  )
+) +
+  geom_segment(
+    aes(
+      x = 40,
+      xend = lifeExp,
+      y = country,
+      yend = country
+    ),
+    color = "lightblue"
+  )
 ```
 
 Combine `reorder()` and `geom_segment()` to draw plot in the following:
@@ -469,21 +576,31 @@ Combine `reorder()` and `geom_segment()` to draw plot in the following:
 ```{r}
 # Fancy Cleveland plot
 # write your answer here
-ggplot(plotdata,
-       aes(x = lifeExp,
-           y = reorder(country, lifeExp))) +
-  geom_point(color = "blue",
-             size = 2) +
-  geom_segment(aes(
-    x = 40,
-    xend = lifeExp,
-    y = country,
-    yend = country
-  ),
-  color = "grey",) +
-  labs(title = "Life Expectancy by Country",
-       subtitle = "GapMinder data for Asia - 2007",
-       x = "Life Expectancy (years)") +
+ggplot(
+  plotdata,
+  aes(
+    x = lifeExp,
+    y = reorder(country, lifeExp)
+  )
+) +
+  geom_point(
+    color = "blue",
+    size = 2
+  ) +
+  geom_segment(
+    aes(
+      x = 40,
+      xend = lifeExp,
+      y = country,
+      yend = country
+    ),
+    color = "grey",
+  ) +
+  labs(
+    title = "Life Expectancy by Country",
+    subtitle = "GapMinder data for Asia - 2007",
+    x = "Life Expectancy (years)"
+  ) +
   theme_light() +
   theme(
     panel.grid.major = element_blank(),
