--- a/assign1/Assignment1.Rmd
+++ b/assign1/Assignment1.Rmd
@@ -90,3 +90,39 @@ ggplot(df, aes(x = value)) +
   ggtitle("Standard normal distribution")
 
 ```
+
+```{r}
+# write your code here
+df <- read.csv("LifeSavings.csv")
+
+ggplot(df,
+  aes(
+    x = sr,
+    y = reorder(country, sr)
+  )
+) +
+  geom_bar(stat = "identity") +
+  theme_classic() +
+  labs(
+    x = "Aggregate personal savings",
+    y = ""
+  )
+```
+```{r}
+df %>%
+  mutate(highlight = ifelse(pop75 < 1 & pop15 > 40 ,T, F)) %>%
+  ggplot(
+    aes(
+      x = sr,
+      y = reorder(country, sr)
+    )
+  ) +
+  geom_bar(stat = "identity", aes(fill = highlight)) +
+  guides(fill="none") + # hide the legend
+  scale_fill_manual(values = c("lightgray", "#F1A340")) +
+  theme_classic() +
+  labs(
+    x = "Aggregate personal savings",
+    y = ""
+  )
+```
