fix: fix assign 1 rounding

--- a/assign1/Assignment1.Rmd
+++ b/assign1/Assignment1.Rmd
@@ -141,7 +141,7 @@ df <- plotdata %>%
   arrange(desc(proportion))
 
 df$label <- paste0(
-  round(df$proportion), "%"
+  round(df$proportion, 1), "%"
 )
 
 ggplot(
