--- a/lab8/lab8.Rmd
+++ b/lab8/lab8.Rmd
@@ -18,24 +18,28 @@ Using the Salaries dataset, let’s display the relationship between yrs.since.p
 
 ```{r}
 library(ggplot2)
-data(Salaries, package="carData")
+data(Salaries, package = "carData")
 
 # plot experience vs. salary
-ggplot(Salaries, 
-       aes(x = yrs.since.phd, y = salary)) +
-  geom_point() + 
+ggplot(
+  Salaries,
+  aes(x = yrs.since.phd, y = salary)
+) +
+  geom_point() +
   labs(title = "Academic salary by years since degree")
 ```
 
 Next, let’s include the rank and gender of professor, using color and shape of the points respectively.
 
 ```{r}
-# plot experience vs. salary 
+# plot experience vs. salary
 # (color represents rank, shape represents sex)
-ggplot(Salaries, aes(x = yrs.since.phd, 
-                     y = salary, 
-                     color = rank, 
-                     shape = sex)) +
+ggplot(Salaries, aes(
+  x = yrs.since.phd,
+  y = salary,
+  color = rank,
+  shape = sex
+)) +
   geom_point(size = 3, alpha = .6) +
   labs(title = "Academic salary by rank, sex, and years since degree")
 ```
@@ -49,12 +53,11 @@ $\color{red}{\text{In-class exercise}}$
  
 ```{r}
 library(ggplot2)
-data(Salaries, package="carData")
+data(Salaries, package = "carData")
 
-# plot experience vs. salary 
+# plot experience vs. salary
 # (color represents rank and size represents service)
 # write your answer here
-
 ```
  
 
@@ -63,25 +66,35 @@ data(Salaries, package="carData")
 As a final example, let’s look at the yrs.since.phd vs salary and add sex using color and <font color="#dd0000">quadratic best fit</font><br /> lines.
 
 ```{r}
-# plot experience vs. salary with 
+# plot experience vs. salary with
 # fit lines (color represents sex)
-ggplot(Salaries, 
-       aes(x = yrs.since.phd, 
-           y = salary, 
-           color = sex)) +
-  geom_point(alpha = .4, 
-             size=3) +
-  geom_smooth(se=FALSE, 
-              method="lm", 
-              formula=y~poly(x,2), 
-              linewidth = 1.5) +
-  labs(x = "Years Since Ph.D.",
-       title = "Academic Salary by Sex and Years Experience",
-       subtitle = "9-month salary for 2008-2009",
-       y = "",
-       color = "Sex") +
+ggplot(
+  Salaries,
+  aes(
+    x = yrs.since.phd,
+    y = salary,
+    color = sex
+  )
+) +
+  geom_point(
+    alpha = .4,
+    size = 3
+  ) +
+  geom_smooth(
+    se = FALSE,
+    method = "lm",
+    formula = y ~ poly(x, 2),
+    linewidth = 1.5
+  ) +
+  labs(
+    x = "Years Since Ph.D.",
+    title = "Academic Salary by Sex and Years Experience",
+    subtitle = "9-month salary for 2008-2009",
+    y = "",
+    color = "Sex"
+  ) +
   scale_y_continuous(label = scales::dollar) +
-  scale_color_brewer(palette="Set1") +
+  scale_color_brewer(palette = "Set1") +
   theme_minimal()
 ```
 
@@ -100,7 +113,7 @@ Recall: We have learned how to separate plots using `facet_grid` in lab4.
 # plot salary histograms by rank
 ggplot(Salaries, aes(x = salary)) +
   geom_histogram() +
-  facet_grid(rank~.) +
+  facet_grid(rank ~ .) +
   labs(title = "Salary histograms by rank")
 ```
 
@@ -132,7 +145,6 @@ Use two variables `sex` and `rank` to define the facets.
 ```{r}
 # plot salary histograms by rank and sex
 # write your answer here
-
 ```
 
 
@@ -141,13 +153,18 @@ We can also combine grouping and faceting. In the following graph, we use color 
 
 ```{r}
 # plot salary by years of experience by sex and discipline
-ggplot(Salaries, 
-       aes(x=yrs.since.phd, y = salary, color=sex)) +
+ggplot(
+  Salaries,
+  aes(x = yrs.since.phd, y = salary, color = sex)
+) +
   geom_point() +
-  geom_smooth(method="lm", 
-              se=FALSE) +
-  facet_wrap(~discipline, 
-             ncol = 1) 
+  geom_smooth(
+    method = "lm",
+    se = FALSE
+  ) +
+  facet_wrap(~discipline,
+    ncol = 1
+  )
 ```
 
 
@@ -155,51 +172,70 @@ Let’s make this last plot more attractive.
 
 ```{r}
 # plot salary by years of experience by sex and discipline
-ggplot(Salaries, aes(x=yrs.since.phd, 
-                     y = salary, 
-                     color=sex)) +
-  geom_point(size = 2, 
-             alpha=.5) +
-  geom_smooth(method="lm", 
-              se=FALSE,
-              linewidth = 1.5) +
-  facet_wrap(~factor(discipline, 
-                     labels = c("Theoretical", "Applied")), 
-             ncol = 1) +
-  scale_y_continuous(labels = scales::dollar) + 
+ggplot(Salaries, aes(
+  x = yrs.since.phd,
+  y = salary,
+  color = sex
+)) +
+  geom_point(
+    size = 2,
+    alpha = .5
+  ) +
+  geom_smooth(
+    method = "lm",
+    se = FALSE,
+    linewidth = 1.5
+  ) +
+  facet_wrap(
+    ~ factor(discipline,
+      labels = c("Theoretical", "Applied")
+    ),
+    ncol = 1
+  ) +
+  scale_y_continuous(labels = scales::dollar) +
   theme_minimal() +
-  scale_color_brewer(palette="Set1") +
-  labs(title = paste0("Relationship of salary and years ",
-                      "since degree by sex and discipline"),
-       subtitle = "9-month salary for 2008-2009",
-       color = "Gender",
-       x = "Years since Ph.D.",
-       y = "Academic Salary")
+  scale_color_brewer(palette = "Set1") +
+  labs(
+    title = paste0(
+      "Relationship of salary and years ",
+      "since degree by sex and discipline"
+    ),
+    subtitle = "9-month salary for 2008-2009",
+    color = "Gender",
+    x = "Years since Ph.D.",
+    y = "Academic Salary"
+  )
 ```
 
 
 As a final example, we’ll shift to a new dataset and plot the change in life expectancy over time for countries in the “Americas”. The data comes from the `gapminder` dataset in the gapminder package. Each country appears in its own facet. The theme functions are used to simplify the background color, rotate the x-axis text, and make the font size smaller.
 
 ```{r}
-# plot life expectancy by year separately 
+# plot life expectancy by year separately
 # for each country in the Americas
 data(gapminder, package = "gapminder")
 
 # Select the Americas data
-plotdata <- dplyr::filter(gapminder, 
-                          continent == "Americas")
+plotdata <- dplyr::filter(
+  gapminder,
+  continent == "Americas"
+)
 
 # plot life expectancy by year, for each country
-ggplot(plotdata, aes(x=year, y = lifeExp)) +
-  geom_line(color="grey") +
-  geom_point(color="blue") +
-  facet_wrap(~country) + 
+ggplot(plotdata, aes(x = year, y = lifeExp)) +
+  geom_line(color = "grey") +
+  geom_point(color = "blue") +
+  facet_wrap(~country) +
   theme_minimal(base_size = 9) +
-  theme(axis.text.x = element_text(angle = 45, 
-                                   hjust = 1)) +
-  labs(title = "Changes in Life Expectancy",
-       x = "Year",
-       y = "Life Expectancy") 
+  theme(axis.text.x = element_text(
+    angle = 45,
+    hjust = 1
+  )) +
+  labs(
+    title = "Changes in Life Expectancy",
+    x = "Year",
+    y = "Life Expectancy"
+  )
 ```
 
 
@@ -214,10 +250,10 @@ Figure out the x axis and y axis for each plot.
 
 ```{r}
 # Data: numeric variables of the native mtcars dataset
-data <- mtcars[ ,c(1,3:6)]
- 
+data <- mtcars[, c(1, 3:6)]
+
 # Plot
-plot(data, pch=20, cex=1, col="#69b3a2")
+plot(data, pch = 20, cex = 1, col = "#69b3a2")
 ```
 
 The `pch` value is in range [0,25], corresponding to different plotting symbols. The `cex` decides the size of pch symbols.
@@ -239,13 +275,15 @@ Scatterplots of each pair of numeric variable are drawn on the left part of the 
 library(GGally)
 
 
-data <- data.frame( var1 = 1:100 + rnorm(100,sd=20), 
-                    var2 = 1:100 + rnorm(100,sd=27), 
-                    var3 = rep(1, 100) + rnorm(100, sd = 1)) 
-data$var4 = data$var1 ** 2 
-data$var5 = -(data$var1 ** 2) 
+data <- data.frame(
+  var1 = 1:100 + rnorm(100, sd = 20),
+  var2 = 1:100 + rnorm(100, sd = 27),
+  var3 = rep(1, 100) + rnorm(100, sd = 1)
+)
+data$var4 <- data$var1**2
+data$var5 <- -(data$var1**2)
 
-p <- ggpairs(data, title="correlogram with ggpairs()") 
+p <- ggpairs(data, title = "correlogram with ggpairs()")
 p
 ```
 
@@ -259,13 +297,15 @@ The `ggcorr()` function allows to visualize the correlation of each pair of vari
 ```{r}
 library(GGally)
 
-data <- data.frame( var1 = 1:100 + rnorm(100,sd=20), 
-                    var2 = 1:100 + rnorm(100,sd=27), 
-                    var3 = rep(1, 100) + rnorm(100, sd = 1)) 
-data$var4 = data$var1 ** 2 
-data$var5 = -(data$var1 ** 2) 
+data <- data.frame(
+  var1 = 1:100 + rnorm(100, sd = 20),
+  var2 = 1:100 + rnorm(100, sd = 27),
+  var3 = rep(1, 100) + rnorm(100, sd = 1)
+)
+data$var4 <- data$var1**2
+data$var5 <- -(data$var1**2)
 
-ggcorr(data) 
+ggcorr(data)
 ```
 
 ### Split by group
@@ -276,7 +316,7 @@ It is possible to use ggplot2 aesthetics on the chart, for instance to color eac
 library(GGally)
 library(ggplot2)
 
-ggpairs(iris) 
+ggpairs(iris)
 ```
 
 $\color{red}{\text{In-class exercise}}$
@@ -291,23 +331,20 @@ The plots should be exactly the same with the one in ggpairs.
 
 
 # writr your code here to draw plot(2,1) of ggpairs;
-
 ```
 
 Uncomment following commands one by one for understanding the arguments of ggpairs.
 
 ```{r}
+# ggpairs(iris, mapping = aes(col=Species))
 
-#ggpairs(iris, mapping = aes(col=Species)) 
+# ggpairs(iris, mapping = aes(col=Species),columns = 1:4)
 
-#ggpairs(iris, mapping = aes(col=Species),columns = 1:4) 
+# ggpairs(iris, mapping = aes(col=Species),columns = 1:4,upper = list(continuous = "points"))
 
-#ggpairs(iris, mapping = aes(col=Species),columns = 1:4,upper = list(continuous = "points")) 
+# ggpairs(iris, mapping = aes(col=Species),columns = 1:4,upper = list(continuous = "points"),legend = 1)
 
-#ggpairs(iris, mapping = aes(col=Species),columns = 1:4,upper = list(continuous = "points"),legend = 1) 
-
-ggpairs(iris, mapping = aes(col=Species),columns = 1:4,upper = list(continuous = "points"),legend = 2, progress = F) 
-
+ggpairs(iris, mapping = aes(col = Species), columns = 1:4, upper = list(continuous = "points"), legend = 2, progress = F)
 ```
 
 ### Parallel coordinates
@@ -352,13 +389,14 @@ data <- iris
 
 # Plot
 ggparcoord(data,
-           columns = 1:4, 
-           groupColumn = 5, 
-           order = "anyClass",
-           showPoints = TRUE, 
-           title = "Parallel Coordinate Plot for the Iris Data",
-           alphaLines = 0.3) + 
-  scale_color_viridis(discrete=TRUE) +
+  columns = 1:4,
+  groupColumn = 5,
+  order = "anyClass",
+  showPoints = TRUE,
+  title = "Parallel Coordinate Plot for the Iris Data",
+  alphaLines = 0.3
+) +
+  scale_color_viridis(discrete = TRUE) +
   theme_minimal()
 ```
 
@@ -382,19 +420,20 @@ data <- data %>% arrange(desc(Species))
 
 # Plot
 ggparcoord(data,
-           columns = 1:4, 
-           groupColumn = 5, 
-           order = "anyClass",
-           showPoints = TRUE, 
-           title = "",
-           alphaLines = 1) + 
-  theme(legend.position="top",
-        plot.title = element_text(size=10)) +
-  xlab("") 
+  columns = 1:4,
+  groupColumn = 5,
+  order = "anyClass",
+  showPoints = TRUE,
+  title = "",
+  alphaLines = 1
+) +
+  theme(
+    legend.position = "top",
+    plot.title = element_text(size = 10)
+  ) +
+  xlab("")
 
 # modify above code to highlight the line of setosa in green
-
-
 ```
 
 ### Select colors
