chore: tweak q1 text

--- a/assign2/Assignment2.Rmd
+++ b/assign2/Assignment2.Rmd
@@ -24,9 +24,8 @@ ggplot(df, aes(y = reorder(sector, n, sum, decreasing = TRUE), x = n, fill = sex
   geom_bar(stat = "identity") +
   geom_text(aes(label = n), position = position_stack(vjust = 0.5), color = "black", size = 3) +
   labs(
-    title = "Number of Females and Males in Each Sector",
-    x = "Count",
-    y = "Sector"
+    x = "Number of persons",
+    y = ""
   ) +
   scale_fill_manual(values = c("F" = "#C73C68", "M" = "#B6C468"))
 # + theme_minimal()
