--- a/assign2/Assignment2.Rmd
+++ b/assign2/Assignment2.Rmd
@@ -68,3 +68,47 @@ ggplot(SaratogaHouses, aes(x = factor(rooms), y = price)) +
   scale_y_continuous(labels = scales::dollar_format()) +
   theme_minimal()
 ```
+Q4: Please plot the Cleveland dot chart for the percentage of receipts in GDP by country.
+The datasset `newgdp` from the package `CGPfunctions` records current receipts of fifteen national governments as a percentage of gross domestic product.
+You can read more detail by running the code `??newgdp` in the console.
+
+Hint: Please install the package CGPfunctions if you haven’t installed.
+(No need to write the install code in the R code chunk below.) The range of x is (0.2, 0.6).
+```{r}
+data(newgdp, package = "CGPfunctions")
+
+df <- newgdp %>% 
+  filter(Year == "Year1979") %>%
+  mutate(GDP = GDP / 100)
+
+ggplot(df, aes(
+    x = GDP, 
+    y = reorder(Country, GDP)
+  )
+) +
+  geom_segment(
+    aes(
+      x = 0.2,
+      xend = GDP,
+      y = reorder(Country, GDP),
+      yend = Country
+    ),
+    color = "grey"
+  ) +
+  geom_point(color="pink", size=3) +
+  scale_x_continuous(labels = scales::percent_format()) +
+  labs(
+    x = "",
+    y = "",
+    title = "Percentage of Receipts in GDP by Country"
+  ) +
+  theme_light() +
+  theme(
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(),
+    axis.ticks.y = element_blank(),
+    axis.ticks.x = element_blank()
+  )
+```
